# testEngine

./: .gitignore  CMakeLists.txt  README.md  Smile Engine 2D.sln  sourcecode.vme
Commpiller/: main.py
EditorCode/: 3dEditor.html  Editor0.3.html  Editor0.4.html  Редактор для старых сохранений.html
Engine/: CMakeLists.txt
Engine/src/: main.cpp
Smile Engine 2D/: AboutApp.Designer.cs  AboutApp.cs  CreateProject.Designer.cs  CreateProject.cs  CreateProject.resx  Smile Engine 2D.csproj  main.cs  openFile.Designer.cs  openFile.cs  window.Designer.cs  window.cs  window.resx
Smile Engine 2D/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
core/: engine.h  main.cpp  vector.h
core/graphics/: grid.h  gui.h  objects.cpp  objects.h  objects.hpp  rect.hpp
core/graphics/color/: rgb.h
core/graphics/render/: mesh.h  object.h
core/input/: keys.h  mouse.h
core/maploader/: obj_list.txt  reader.cpp
core/phisics/: collide.h
core/profiler/: script.h  sound.h  time.h
core/src/window/: window.cpp
core/window/: window.cpp  window.h  window.hpp
core_old/: main.cpp
core_old/graphics/: circle.hpp  objects.cpp  objects.hpp  renderable.hpp
core_old/window/: window.cpp  window.hpp  window1.cpp
src/cpp/: window.cpp
